Custom Pixel Size, Prevent Pixel stretching

--- a/index.css
+++ b/index.css
@@ -1,11 +1,12 @@
 .row {
 	display: flex;
 	flex-direction: row;
+	flex-shrink: 0;
 }
 
 .pixel {
-	width: 1vw;
-	height: 1vw;
+	min-width: 1vw;
+	min-height: 1vw;
 	border: 1px solid black;
 }
 
